fix чтение файла